fix(core,spec,test): harden ExtensionRegistry, null-guard validator, pin null-reason
- ExtensionRegistry.scan now iterates ServiceLoader.stream() and wraps
  each provider.get() in try/catch(ServiceConfigurationError |
  RuntimeException). Direct ServiceLoader iteration aborts on the
  first provider that fails to load or initialize, taking down all
  later providers with it. For an SPI boundary, one bad mod jar must
  not poison discovery for every other extension; we log a warning
  with provider type + exception and continue.
- ExtensionRegistry.Snapshot now uses Collections.unmodifiableMap(new
  LinkedHashMap<>(...)) instead of Map.copyOf() for the byRecipeType
  map. Map.copyOf produces an unmodifiable map with unspecified
  iteration order, which silently discarded the LinkedHashMap
  registration order this snapshot is documented to preserve and
  exercised by all().
- SpecValidator.validate now Objects.requireNonNull's spec,
  recipeTypeKnown, blockKnown, and customKindKnown at the top of the
  four-arg overload. A null predicate would otherwise NPE deep inside
  the rule helpers with a less-actionable trace.
- CustomHandlerTest.refusedRejectsBlankReason now also asserts that
  refused(null) throws NullPointerException. The Refused record's
  Objects.requireNonNull contract was previously only verified by
  blank/whitespace cases.